refactor: restructure SteveConfiguration paths